Update triumph files: move & style fixes

--- a/triumph/Code/triumph.html
+++ b/triumph/Code/triumph.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triumph Motocorp India</title>
   <!-- Site favicon / logo -->
-  <link rel="icon" href="download.png" type="image/png">
+  <link rel="icon" href="/triumph/PIcs and videos/download.png" type="image/png">
   <link rel="stylesheet" href="triumph.css">
 
 </head>
@@ -178,24 +178,25 @@
         width: 395px;
         border: 2px solid #e40b24;
         font-family: DIN2014-Demi;
+        cursor: pointer;
     }
     </style>
     <link rel="stylesheet" href="style.css">
 <body>
     <div id="menu">
-        <img src="logo.svg" alt="logo" style="height: 24px; width:115px; padding: 24px 14px;">
+        <img src="/triumph/triumph pics/logo (1).svg" alt="logo" style="height: 24px; width:115px; padding: 24px 14px;">
         <p id="Accessor">
                 <span> Motorcycles</span>  <span>Accessories</span>    <span>Clothing</span> 
                 <span>Owners</span>   <span>Discover</span>  <span> Racing </span>
         </p>        
         <p id="dealer"><span>Dealer </span> <span>Customize</span> <span>Finance Offers</span> <span>Book Now</span>
-            <img src="pin icon-01.svg" alt="location-dot" style="height: 20px; width: 30px;">
+            <img src="/triumph/triumph pics/pin icon-01.svg" alt="location-dot" style="height: 20px; width: 30px;">
             <span style="font-size: 14px;">INDIA</span> <span> <select name="" id=""></select></span>
         </p>            
     </div>
     <div class="tridant">
         <video width="95%" autoplay muted loop>
-        <source src="copy of clean_16x9_my25_trident 660_web header 1.mp4" type="video/mp4">
+        <source src="/triumph/triumph pics/copy of clean_16x9_my25_trident 660_web header 1.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
         <div class="button">
@@ -221,13 +222,13 @@
     </div>
     <div id="enquiery" style="position: relative; width: 100%; height: 70px; display: flex;
              background-color: #2a2a2a; align-content: center;" >
-             <img src="icon-brochure.svg" alt="" style="    max-width: 28px; width: 28px; position: relative;
+             <img src="/triumph/triumph pics/icon-brochure.svg" alt="" style="    max-width: 28px; width: 28px; position: relative;
                  top: 50%; transform: translateY(-50%); left: 205px;">
         <span> enquire now</span> 
         <hr> 
-        <img src="icon-test-drive.svg" alt="" style="    max-width: 28px; width: 28px; position: relative ; left: 204px;">
+        <img src="/triumph/triumph pics/icon-test-drive.svg" alt="" style="    max-width: 28px; width: 28px; position: relative ; left: 204px;">
         <span> book now</span><hr>
-        <img src="whatsapp-white-icon.png" alt="" style=" max-width: 28px; width: 28px; height: 35px; 
+        <img src="/triumph/triumph pics/whatsapp-white-icon.png" alt="" style=" max-width: 28px; width: 28px; height: 35px; 
                   position: relative; left: 205px; top: 20px;">
         <span> connect on whatsapp</span>
     </div>
@@ -244,7 +245,7 @@
     <!-- First image with hover effect -->
       <a href="https://www.triumphmotorcycles.in/for-the-ride/brand/triumph-originals" style="color: black; cursor: pointer;">
         <div class="image-wrapper">
-            <img src="triumph-originals-homepage-500x325.avif" alt="">
+            <img src="/triumph/triumph pics/triumph-originals-homepage-500x325.avif" alt="">
             <div class="hover-text">DISCOVER MORE</div>  
         </div>
         <div style="position:absolute; top: 350px; left: 174px; display: block; width: 511px;">
@@ -263,7 +264,7 @@
         <!-- Second image -->
       <a href="https://www.triumphmotorcycles.in/for-the-ride/brand/triumph-originals" style="color: black; cursor: pointer;">
         <div class="side-images">
-          <img src="moto2-start-homepage-500x325.avif" alt="">
+          <img src="/triumph/triumph pics/moto2-start-homepage-500x325.avif" alt="">
         </div>
         <div style="position:absolute; top: 350px; left: 699px; display: block; width: 511px;">
         <h3 class="streettriple">STREET TRIPLE 765 RS</h3>
@@ -282,7 +283,7 @@
         <!-- Third image -->
       <a href="https://www.triumphmotorcycles.in/for-the-ride/news" style="color: black; cursor: pointer;">
         <div class="Third">
-          <img src="sowa-homepage-500x325.avif" alt="">
+          <img src="/triumph/triumph pics/sowa-homepage-500x325.avif" alt="">
         </div>
         <div style="position:absolute; top: 350px; right: 175px; display: block; width: 511px;">
         <h3 class="news">NEWS</h3>
@@ -297,13 +298,15 @@
       </a>   
     </div>
     <div style="height: 550px; margin-top: 63px; height: 600px; width: 100%;" >
-        <img src="homepage-fwcta-alt-1920x768.avif" alt="">
+        <img src="/triumph/triumph pics/homepage-fwcta-alt-1920x768.avif" alt="">
         <div class="letsgo" style="position: relative; text-align: center; margin-top: -445px;"  >
         <h2 style="font-size: 50px; letter-spacing: 1px; line-height: 60px;color: #fff;">CONFIGURE YOUR PERFECT RIDE</h2>
         </div>
         <a href="https://www.triumphmotorcycles.in/configure">
             <button class = "letsgo1">LET'S GO</button></a>
-<img src="JvsnINJ2CZv_z8zv2d.svg" alt="" style="position: fixed; bottom: 50px; right: 28px;">
+<a href="https://api.whatsapp.com/send?phone=917028889751&text=Hello%2C%20I%20want%20to%20explore%20more%20about%20Triumph%20Bikes%0A%0A%0A%0A">           
+<img src="/triumph/triumph pics/JvsnINJ2CZv_z8zv2d.svg" alt="" style="position: fixed; bottom: 50px; right: 28px;" style="cursor: pointer;">
+</a> 
 <hr>        
     
 
